data/derived/sp14/progs/unify/prog3614.ml.out
Characters 77-79:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type int -> 'a
       but an expression was expected of type ('a -> 'a) list
